--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three</title>
+    <title>-- Starter --</title>
 </head>
 <style>
     body{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        overflow: hidden;
     }
 </style>
 <body>
